Add projects page

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
         <h1>Igor Zoriy: Web Developer</h1>
 
         <div class="menu">
-            <a href="#">About me</a>
-            <a href="#">Projects</a>
+            <a href="#about">About me</a>
+            <a href="#projects">Projects</a>
             <a href="#">Experiments</a>
             <a href="#">Contacts and Profiles</a>
         </div>
     </div>
 </header>
 
-<div class="layout page">
+<div class="layout page" id="about">
+    <h2>About me</h2>
     Hello. My name is Igor Zoriy. I'm a web-developer.
     I'm skilled in server-side development:
     <ul>
@@ -46,6 +47,96 @@
         I like to spend my vacation traveling. And I like living in calm and beautiful places.
         Also I like to read books and play old console games.
     </p>
+</div>
+
+<div class="layout page" id="projects">
+    <h2>Projects</h2>
+
+    <div class="item-container">
+        <img src="img/nextlove.png" title="Nextlove">
+
+        <div class="item">
+            <h3>
+                <a href="http://www2.nextlove.com/">NextLOVE</a>
+            </h3>
+
+            <div class="description">
+                <strong>Dating for divorced and single parents.</strong><br>
+                PHP, Symfony, Doctrine, PHPUnit, MySQL, Redis, JavaScript, jQuery, BackboneJS, LESS, Grunt.
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <img src="img/direct.png" title="Direct Result">
+
+        <div class="item">
+            <h3>
+                <a href="http://direct-result.nl/">Direct Result</a>
+            </h3>
+
+            <div class="description">
+                <strong>The project attracting donors for more than 15 charitable organizations.</strong><br>
+                PHP, Symfony, Doctrine, MySQL, JavaScript, jQuery.
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <img src="img/yoxla.png" title="Yoxla">
+
+        <div class="item">
+            <h3>
+                <a href="http://www.yoxla.az/en">Yoxla</a>
+            </h3>
+
+            <div class="description">
+                <strong>Azerbaijan internet and TV providers' catalog.</strong><br>
+                PHP, Symfony, Doctrine, MySQL, JavaScript, jQuery.
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <img src="img/sociomania.png" title="Sociomania">
+
+        <div class="item">
+            <h3>
+                <a href="http://sociomania.ru/">Sociomania</a>
+            </h3>
+
+            <div class="description">
+                <strong>The project for promotion users' products in social networks.</strong><br>
+                PHP, Symfony, Doctrine, MySQL, JavaScript, jQuery, Bootstrap.
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <img src="img/mywayticket.png" title="My Way Ticket">
+
+        <div class="item">
+            <h3>
+                <a href="http://www.mywayticket.com/">My Way Ticket</a>
+            </h3>
+
+            <div class="description">
+                <strong>The system for buying and selling tickets for any event.</strong><br>
+                PHP, Symfony, Doctrine, MySQL, JavaScript, jQuery.
+            </div>
+        </div>
+    </div>
+    <div class="item-container">
+        <img src="img/xregistar.png" title="X-Registar">
+
+        <div class="item">
+            <h3>
+                <a href="http://x-registar.ru/">X-Registar</a>
+            </h3>
+
+            <div class="description">
+                <strong>The project serving for prevention of HIV and another sexually transmitted disease
+                    extension.</strong><br>
+                PHP, Zend Framework, MySQL, JavaScript.
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
