--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#about">About me</a>
             <a href="#projects">Projects</a>
             <a href="#">Experiments</a>
-            <a href="#">Contacts and Profiles</a>
+            <a href="#contacts">Contacts and Profiles</a>
         </div>
     </div>
 </header>
@@ -137,6 +137,29 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="layout page" id="contacts">
+    <h2>My contacts and links on profiles</h2>
+    Contacts:
+    <ul>
+        <li><a href="mailto:igor.zoriy@gmail.com">E-mail</a></li>
+        <li><a href="skype:igor.zoriy?add">Skype</a></li>
+    </ul>
+    Job:
+    <ul>
+        <li><a href="https://github.com/igorzoriy">GitHub</a></li>
+        <li><a href="http://www.linkedin.com/in/igorzoriy">LinkedIn</a></li>
+        <li><a href="http://igorzoriy.moikrug.ru/">MoiKrug</a></li>
+        <li><a href="http://brainstorage.me/IgorZoriy">BrainStorage</a></li>
+    </ul>
+    Other:
+    <ul>
+        <li><a href="https://twitter.com/#!/igor_zoriy">Twitter</a></li>
+        <li><a href="http://habrahabr.ru/users/nightstalker/">HabraHabr</a></li>
+        <li><a href="https://www.facebook.com/igor.zoriy">FaceBook</a></li>
+        <li><a href="http://htmlacademy.ru/public_profiles/id1564">HTML Academy</a></li>
+    </ul>
 </div>
 
 </body>
