Add experiments page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="menu">
             <a href="#about">About me</a>
             <a href="#projects">Projects</a>
-            <a href="#">Experiments</a>
+            <a href="#experiments">Experiments</a>
             <a href="#contacts">Contacts and Profiles</a>
         </div>
     </div>
@@ -137,6 +137,24 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="layout page" id="experiments">
+    <h2>My experiments with new technologies</h2>
+    <ul>
+        <li>
+            <a href="http://igorzoriy.github.io/sieve-of-eratosthenes-canvas/">
+                Sieve of Erathosthenes on HTML 5 Canvas
+            </a>
+            &nbsp;-&nbsp; Try to using Canvas
+        </li>
+        <li>
+            <a href="http://igorzoriy.github.io/snake-canvas/">
+                Snake on HTML 5 Canvas
+            </a>
+            &nbsp;-&nbsp; Try to using QUnit and RequestAnimationFrame API, try to code small and simple game on Pure JS
+        </li>
+    </ul>
 </div>
 
 <div class="layout page" id="contacts">
