Add finding and changing active item in menu

--- a/index.html
+++ b/index.html
@@ -193,5 +193,6 @@
     <div><img src="//mc.yandex.ru/watch/23218936" style="position:absolute; left:-9999px;" alt=""/></div>
 </noscript>
 <!-- /Yandex.Metrika counter -->
+<script src="script.js"></script>
 </body>
 </html>
