Change email on site

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <h2>My contacts and links on profiles</h2>
     Contacts:
     <ul>
-        <li><a href="mailto:igor.zoriy@gmail.com">E-mail</a></li>
+        <li><a href="mailto:work@igorzoriy.com">E-mail</a></li>
         <li><a href="skype:igor.zoriy?add">Skype</a></li>
     </ul>
     Job:
