Add supports for IE 8-9

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
           rel="stylesheet" type="text/css">
     <link href="style.css" type="text/css" rel="stylesheet" media="all">
+    <script type="text/javascript">
+        document.createElement("header");
+    </script>
 </head>
 
 <body>
@@ -15,7 +18,7 @@
 
         <div class="menu">
             <a href="#about">About me</a>
-            <a href="#projects">Projects</a>
+            <a href="#projects" class="one two free">Projects</a>
             <a href="#experiments">Experiments</a>
             <a href="#contacts">Contacts and Profiles</a>
         </div>
