--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
             </a>
             &nbsp;-&nbsp; Try to using QUnit and RequestAnimationFrame API, try to code small and simple game on Pure JS
         </li>
+        <li>
+            <a href="https://github.com/igorzoriy/grunt-backup">
+                Grunt backup
+            </a>
+            &nbsp;-&nbsp; Try to write grunt plugin, try to use Nodeunit
+        </li>
     </ul>
 </div>
 
