Use jpeg instead of png for images

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h2>Projects</h2>
 
     <div class="item-container">
-        <img src="img/nextlove.png" title="Nextlove">
+        <img src="img/nextlove.jpg" title="Nextlove">
 
         <div class="item">
             <h3>
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="item-container">
-        <img src="img/direct.png" title="Direct Result">
+        <img src="img/direct.jpg" title="Direct Result">
 
         <div class="item">
             <h3>
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="item-container">
-        <img src="img/yoxla.png" title="Yoxla">
+        <img src="img/yoxla.jpg" title="Yoxla">
 
         <div class="item">
             <h3>
@@ -98,7 +98,7 @@
         </div>
     </div>
     <div class="item-container">
-        <img src="img/sociomania.png" title="Sociomania">
+        <img src="img/sociomania.jpg" title="Sociomania">
 
         <div class="item">
             <h3>
@@ -112,7 +112,7 @@
         </div>
     </div>
     <div class="item-container">
-        <img src="img/mywayticket.png" title="My Way Ticket">
+        <img src="img/mywayticket.jpg" title="My Way Ticket">
 
         <div class="item">
             <h3>
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="item-container">
-        <img src="img/xregistar.png" title="X-Registar">
+        <img src="img/xregistar.jpg" title="X-Registar">
 
         <div class="item">
             <h3>
