--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <title>IgorZoriy.com</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
           rel="stylesheet" type="text/css">
-    <link href="style.css" type="text/css" rel="stylesheet" media="all">
+    <link href="../style.css" type="text/css" rel="stylesheet" media="all">
     <script type="text/javascript">
         document.createElement("header");
     </script>
@@ -202,6 +202,6 @@
     <div><img src="//mc.yandex.ru/watch/23218936" style="position:absolute; left:-9999px;" alt=""/></div>
 </noscript>
 <!-- /Yandex.Metrika counter -->
-<script src="script.js"></script>
+<script src="../script.js"></script>
 </body>
 </html>
