Add gulp watch task

--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,7 @@
     <title>IgorZoriy.com</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
           rel="stylesheet" type="text/css">
-    <link href="../style.css" type="text/css" rel="stylesheet" media="all">
-    <script type="text/javascript">
-        document.createElement("header");
-    </script>
+    <link href="styles.css" type="text/css" rel="stylesheet" media="all">
 </head>
 
 <body>
